2005-08-21 Francois Proulx <francois.proulx@gmail.com>
	* Added reference to new street address fields in mapping page and on status template
	* Fix bug on line 756 of RssPressReview , added check for empty var.
	* Flickr support is broken, added  bug to sf.net tracker
	
2005-08-21 Francois Proulx <francois.proulx@gmail.com>
	* Node admin UI should now be completed.
	* Minor bug fixes in Geocoder
	* Merged node_owners and node_tech_officers table into node_stakeholders
	
2005-08-19 Benoit Grégoire  <bock@step.polymtl.ca>
	* New schema version
	* install.php, tmp/magpie_cache/:  Move all magpie caches 
	to a central location, adjust install script to match.
	* classes/MainUI.php:  Add $_REQUEST array output if debug_request is set as a parameter to the page
	* classes/Network.php, classes/Node.php:  Change content ordering to be most recently subscribed first,
	 this is a stopgap measure while waiting for Content ordering to be explicitely settable. 
	* classes/Content/RssAggregator.php:  Full admin UI, some bug fixes
	* lib/RssPressReview/RssPressReview.php: New version, adds isFeedAvailable() and getFeedTitle() methods.
	  Fixes minor bugs

2005-08-17 Pascal Leclerc  <pascal@plec.ca>
        * Added install script + minor changes in schema_validate.php

2005-08-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Re-Run sync_sql_for_cvs.sh, did not run to completion last time.

2005-08-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Run sync_sql_for_cvs.sh
	* sql/dump_initial_data_postgres.sh:  Fix a hardcoded reference to rss_url which no longer exists
	* .project:  Remove mistakenly commited file in last commit
	* .cvsignore:  Add file to avoid previous error
	
2005-08-12 Francois Proulx <francois.proulx@gmail.com>
	* Added missing GisPoint fille to CVS
	* Fixed some bugs
	* Added Technical officer table
	* Added technical officer management to node UI
	
2005-08-12 Francois Proulx <francois.proulx@gmail.com>
	* Changed config.php GMAPS_API_KEY to GMAPS_PUBLIC_API_KEY