@@ -1,3 +1,7 @@
+2005-08-22 Francois Proulx <francois.proulx@gmail.com>
+	* Added edit button for quickly accessing Content editing mode
+	* Changed the layout so the admin ui fits in a tighter space
+	
 2005-08-21 Francois Proulx <francois.proulx@gmail.com>
 	* Added reference to new street address fields in mapping page and on status template
 	* Fix bug on line 756 of RssPressReview , added check for empty var.
